--- a/index.html
+++ b/index.html
@@ -232,6 +232,11 @@
                 <a href="https://wa.me/919479983215?text=Hi,%20I%20want%20to%20become%20a%20vendor%20on%20Decor%20My%20Event!" target="_blank" class="bg-white text-slate-800 border border-slate-200 hover:bg-slate-50 font-bold py-4 px-8 rounded-full transition-all flex items-center justify-center gap-2 text-base shadow-md">
                     <i class="fa-brands fa-whatsapp text-green-500 text-lg"></i> Become a Vendor
                 </a>
+
+                <!-- New Browse Vendors Button -->
+                <a href="vendors.html" class="bg-slate-900 text-white border border-slate-700 hover:bg-slate-800 font-bold py-4 px-8 rounded-full transition-all flex items-center justify-center gap-2 text-base shadow-md">
+                    <i class="fa-solid fa-shop text-brand-gold"></i> Browse Vendors
+                </a>
             </div>
 
             <!-- Trust Badges -->
